@@ -43,10 +43,10 @@
  * @package p4a
  * @see P4A_Toolbar
  */
-class P4A_Standard_Toolbar extends P4A_Toolbar
+class P4A_Full_Toolbar extends P4A_Toolbar
 {
 	/**
-	 * @param string				Mnemonic identifier for the object.
+	 * @param string $name Mnemonic identifier for the object.
 	 */
 	public function __construct($name)
 	{
@@ -108,40 +108,14 @@ class P4A_Standard_Toolbar extends P4A_Toolbar
 	{
 		$this->_mask_name = $mask->getName();
 
-		$this->buttons->save->implementMethod('onClick', $mask, 'saveRow');
-		$this->buttons->cancel->implementMethod('onClick', $mask, 'reloadRow');
-		$this->buttons->first->implementMethod('onClick', $mask, 'firstRow');
-		$this->buttons->prev->implementMethod('onClick', $mask, 'prevRow');
-		$this->buttons->next->implementMethod('onClick', $mask, 'nextRow');
-		$this->buttons->last->implementMethod('onClick', $mask, 'lastRow');
-		$this->buttons->new->implementMethod('onClick', $mask, 'newRow');
-		$this->buttons->delete->implementMethod('onClick', $mask, 'deleteRow');
-		$this->buttons->exit->implementMethod('onClick', $mask, 'showPrevMask');
-	}
-
-	/**
-	 * @return string
-	 */
-	public function getAsString()
-	{
-		$mask =& p4a_mask::singleton($this->_mask_name);
-
-		if ($mask->data->isNew() and $mask->data->getNumRows() > 0) {
-			$this->buttons->first->enable(false);
-			$this->buttons->prev->enable(false);
-			$this->buttons->next->enable(false);
-			$this->buttons->last->enable(false);
-			$this->buttons->new->enable(false);
-			$this->buttons->delete->enable(false);
-		} else {
-			$this->buttons->first->enable(false);
-			$this->buttons->prev->enable(false);
-			$this->buttons->next->enable(false);
-			$this->buttons->last->enable(false);
-			$this->buttons->new->enable(false);
-			$this->buttons->delete->enable(false);
-		}
-
-		return parent::getAsString();
+		$this->buttons->save->implementMethod('onclick', $mask, 'saveRow');
+		$this->buttons->cancel->implementMethod('onclick', $mask, 'reloadRow');
+		$this->buttons->first->implementMethod('onclick', $mask, 'firstRow');
+		$this->buttons->prev->implementMethod('onclick', $mask, 'prevRow');
+		$this->buttons->next->implementMethod('onclick', $mask, 'nextRow');
+		$this->buttons->last->implementMethod('onclick', $mask, 'lastRow');
+		$this->buttons->new->implementMethod('onclick', $mask, 'newRow');
+		$this->buttons->delete->implementMethod('onclick', $mask, 'deleteRow');
+		$this->buttons->exit->implementMethod('onclick', $mask, 'showPrevMask');
 	}
 }
